--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -199,9 +199,6 @@ background-color:#ffffff;
     min-height: calc(21.118px + 60px);
 }
 
-.afficher-plus {
-    padding-bottom: 30px;
-}
 
 /*RESPONSIVE: Populaires*/
 
